# customer-service-agent

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  agent_config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agent/: prompt.py  service.py  tool_executor.py
app/api/: dependencies.py  models.py
app/api/routes/: chat.py  sessions.py
app/escalation/: handler.py
app/memory/: database.py  models.py  repository.py  seed.py
app/static/: index.html
app/tools/: registry.py
app/tools/examples/: __init__.py  account_history.py  account_info.py  faq_search.py  order_history.py  order_lookup.py
docs/superpowers/specs/: 2026-05-24-customer-service-agent-design.md
tests/: conftest.py  test_agent_service.py  test_chat_api.py  test_escalation.py  test_memory.py  test_tool_registry.py
